--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "type": "module",
   "scripts": {
     "start": "tsx server/index.ts",
-    "build": "npm install"
+    "dev": "NODE_ENV=development tsx server/index.ts",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
-    "drizzle-orm": "^0.39.1",
-    "drizzle-kit": "^0.30.4",
-    "drizzle-zod": "^0.7.0",
-    "express": "^4.21.2",
+    "drizzle-orm": "^0.36.4",
+    "drizzle-zod": "^0.5.1",
+    "express": "^4.21.1",
     "ws": "^8.18.0",
-    "zod": "^3.24.2",
-    "tsx": "^4.19.1"
+    "zod": "^3.23.8",
+    "tsx": "^4.19.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.9.0",
+    "@types/ws": "^8.5.13",
+    "drizzle-kit": "^0.30.0"
   }
 }
